examples/test/testpolicy17819.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17819
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key19: value9
      key7: value10
      key25: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value34
          key20: value30
      podSelector:
        matchLabels:
          key2: value40
